--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@ $.ajax({
 });
 </script>
 <script>
-var listgmbr =  ['video/video-3.mp4',
+var listvideo =  ['video/video-3.mp4',
 'video/video-1.mp4',
 'video/video-2.mp4',
 'video/video-4.mp4',
 'video/video-5.mp4']
-var gmbr =  listgmbr[Math.floor(Math.random()*listgmbr.length)];
+var video =  listvideo[Math.floor(Math.random()*listvideo.length)];
 </script>
 <script>
 var listcaption = ['I\'m looking for a chilled guy who is clean and fit to try first time sucking and getting sucked. I?ll need a face and body pic please.',
