--- a/index.html
+++ b/index.html
@@ -239,8 +239,9 @@ var listvideo =  ['video/video-3.mp4',
 var video =  listvideo[Math.floor(Math.random()*listvideo.length)];
 </script>
 	<script>
+		<video id="video" src="video/video-1.mp4" autoplay controls></video>
 	var numb = $(this).index(),
-    videos = [
+    video = [
         "video/video-1.mp4",
         "video/video-2.mp4",
         "video/video-3.mp4",
@@ -300,4 +301,5 @@ var caption =  listcaption[Math.floor(Math.random()*listcaption.length)];
 </body>
 </body>
 </html>
+
 
